...
          title: t("New Orders"),
        }}
      />
      <Tabs.Screen
        name="processing"
        options={{
          tabBarButtonTestID: "rider.tab.orders.processing",
          title: t("Processing"),
        }}
      />
      <Tabs.Screen
        name="delivered"
        options={{
          tabBarButtonTestID: "rider.tab.orders.delivered",
          title: t("Delivered"),
        }}
      />
    </Tabs>
  );
}
...
