...
          backgroundColor: appTheme.themeBackground,
        },
        headerTitleStyle: { color: appTheme.mainTextColor },
        headerLeft: () => {
          return (
            <TouchableOpacity
              testID="rider.drawer.toggle"
              onPress={() => {
                navigation.dispatch(DrawerActions.toggleDrawer());
              }}
              style={{ marginLeft: 16 }}
            >
              <Ionicons name="menu" size={24} color={appTheme.primary} />
...
