...
  // Calculate the marginBottom dynamically
  // const marginBottom = Platform.OS === "ios" ? height * 0.0 : height * 0.01;

  // Render
  return (
    <View
      testID="rider.orders.new.screen"
      className="pt-14 flex-1 pb-16"
      style={[style.container, { backgroundColor: appTheme.screenBackground }]}
    >
      <FlashList
        data={orders}
        estimatedItemSize={ORDER_CARD_ESTIMATED_HEIGHT}
...
