...
          {t("Availability")}
        </Text>
        {loading || loadingProfile ? (
          <SpinnerComponent color={appTheme.secondaryTextColor} />
        ) : (
          <CustomSwitch
            testID="rider.availability.toggle"
            value={isRiderAvailable}
            isDisabled={loading}
            onToggle={async () => {
              try {
                if (!dataProfile?._id?.toString()) {
                  await logout();
...
